# SolarManufacturingTracker

./: DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  KNOWLEDGE_TRANSFER.md  PRD.md  README.md  TECHNICAL_DOCUMENTATION.md  USER_MANUAL.md  add_new_sources.py  add_sample_projects.py  add_test_projects.py  app.py  check_articles.py  cleanup_utility.py  data_manager.py  data_processor.py  debug_scraper.py  diagnostic_data.json  diagnostic_tracker.py  direct_test.py  enhanced_scraper.py  india_renewable_projects_20250516_084922.xlsx  india_renewable_projects_20250516_084934.xlsx  india_renewable_projects_20250516_085201.xlsx  india_renewable_projects_20250516_085521.xlsx  india_renewable_projects_20250516_090723.xlsx  india_renewable_projects_20250516_093018.xlsx  india_renewable_projects_20250517_065757.xlsx  india_renewable_projects_20250517_083846.xlsx  india_renewable_projects_20250519_065000.xlsx  india_renewable_projects_20250519_080632.xlsx  india_renewable_projects_20250519_080633.xlsx  india_renewable_projects_20250602_175435.xlsx  india_renewable_projects_20250602_185215.xlsx  india_renewable_projects_20250603_060027.xlsx  india_renewable_projects_20250603_060418.xlsx  india_renewable_projects_20250603_062356.xlsx  india_renewable_projects_20250603_070518.xlsx  india_renewable_projects_20250603_070519.xlsx  india_renewable_projects_20250603_083554.xlsx  india_renewable_projects_20250603_083556.xlsx  (+27 more)
templates/: about.html  add_project.html  add_source.html  base.html  dashboard.html  diagnostic.html  edit_project.html  error.html  index.html  project_detail.html  (+4 more)
(+6 files in other folders)
